@@ -37,7 +37,6 @@ import java.util.regex.Pattern;
 import com.healthmarketscience.jackcess.DataType;
 import com.healthmarketscience.jackcess.util.OleBlob;
 import static com.healthmarketscience.jackcess.util.OleBlob.*;
-import org.apache.commons.lang3.builder.ToStringBuilder;
 
 /**
  * Utility code for working with OLE data.
@@ -91,7 +90,7 @@ public class OleUtil
     try {
       compoundFactory = (CompoundPackageFactory)
         Class.forName("com.healthmarketscience.jackcess.impl.CompoundOleUtil")
-        .newInstance();
+        .getDeclaredConstructor().newInstance();
     } catch(Throwable t) {
       // must not have poi, will load compound ole data as "other"
     }
@@ -570,7 +569,7 @@ public class OleUtil
 
     @Override
     public String toString() {
-      ToStringBuilder sb = CustomToStringStyle.builder(this);
+      ToStringBuilder sb = ToStringBuilder.builder(this);
       if(_content != null) {
         sb.append("content", _content);
       } else {
@@ -736,7 +735,7 @@ public class OleUtil
 
     @Override
     public String toString() {
-      return toString(CustomToStringStyle.builder(this))
+      return toString(ToStringBuilder.builder(this))
         .append("fileName", _fileName)
         .append("linkPath", _linkPath)
         .append("filePath", _filePath)
@@ -786,7 +785,7 @@ public class OleUtil
 
     @Override
     public String toString() {
-      return toString(CustomToStringStyle.builder(this))
+      return toString(ToStringBuilder.builder(this))
         .append("fileName", _fileName)
         .append("filePath", _filePath)
         .append("localFilePath", _localFilePath)
@@ -812,7 +811,7 @@ public class OleUtil
 
     @Override
     public String toString() {
-      return toString(CustomToStringStyle.builder(this))
+      return toString(ToStringBuilder.builder(this))
         .toString();
     }
   }
@@ -830,7 +829,7 @@ public class OleUtil
 
     @Override
     public String toString() {
-      return toString(CustomToStringStyle.builder(this))
+      return toString(ToStringBuilder.builder(this))
         .append("content", _blob._bytes)
         .toString();
     }
